Mostrando link para todos os posts

--- a/pythonclub.html
+++ b/pythonclub.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <header>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+
         <title>PythonClub - Blog</title>
 
         <link rel="stylesheet" type="text/css" href="static/css/pythonclub.css">
+
         <script type="text/javascript" src="static/js/pythonclub.js"></script>
-    </header>
-<body>
-    <img src="images/pythonclub.png" class="logo">
+    </head>
+    <body>
+        <img src="images/pythonclub.png" class="logo">
 
-    <section id="post-list">
-    </section>
+        <section id="post-list"></section>
 
-</body>
+    </body>
 </html>
