--- a/pythonclub.html
+++ b/pythonclub.html
@@ -11,12 +11,10 @@
         <img src="images/pythonclub.png" class="logo">
 
         <section id="post-list">
-
-            <div id="failed-box" style="display:none; visibility:hidden;">
+            <div id="failed-box">
                 <p>Não foi possível carregar os dados!</p>
                 <p><a href="#">Tente novamente</a></p>
             </div>
-
         </section>
 
         <script type="text/javascript" src="static/js/pace.min.js"></script>
